--- a/css/layout.css
+++ b/css/layout.css
@@ -323,7 +323,7 @@ ul#nav li.current a {
     padding-right: 10%;
 }
 
-.education, .work {
+.work, .skill {
     margin-bottom: 48px;
     padding-bottom: 24px;
     border-bottom: 1px solid #E8E8E8;
